--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@stomp/stompjs": "^7.0.0",
         "@tanstack/react-query": "^5.60.5",
         "axios": "^1.7.7",
         "daisyui": "^4.12.14",
@@ -19,6 +20,7 @@
         "react-hook-form": "^7.53.2",
         "react-router-dom": "^6.28.0",
         "react-toastify": "^10.0.6",
+        "sockjs-client": "^1.6.1",
         "zustand": "^5.0.1"
     },
     "devDependencies": {
@@ -27,6 +29,7 @@
         "@types/node": "^22.9.0",
         "@types/react": "^18.3.12",
         "@types/react-dom": "^18.3.1",
+        "@types/sockjs-client": "^1.5.4",
         "@vite-pwa/assets-generator": "^0.2.6",
         "@vitejs/plugin-react-swc": "^3.5.0",
         "autoprefixer": "^10.4.20",
