--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
         "react-dom": "^18.3.1",
         "react-hook-form": "^7.53.2",
         "react-router-dom": "^6.28.0",
+        "react-slick": "^0.30.2",
         "react-toastify": "^10.0.6",
+        "slick-carousel": "^1.8.1",
         "zustand": "^5.0.1"
     },
     "devDependencies": {
@@ -27,6 +29,7 @@
         "@types/node": "^22.9.0",
         "@types/react": "^18.3.12",
         "@types/react-dom": "^18.3.1",
+        "@types/react-slick": "^0.23.13",
         "@vite-pwa/assets-generator": "^0.2.6",
         "@vitejs/plugin-react-swc": "^3.5.0",
         "autoprefixer": "^10.4.20",
