--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "dependencies": {
         "@tanstack/react-query": "^5.60.5",
         "axios": "^1.7.7",
+        "flowbite": "^2.5.2",
+        "flowbite-react": "^0.10.2",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-hook-form": "^7.53.2",
