--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dependencies": {
         "@tanstack/react-query": "^5.60.5",
         "axios": "^1.7.7",
+        "framer-motion": "^11.11.17",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-hook-form": "^7.53.2",
