--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@lottiefiles/dotlottie-react": "^0.10.0",
         "@tanstack/react-query": "^5.60.5",
         "axios": "^1.7.7",
         "react": "^18.3.1",
