--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
         "preview": "vite preview"
     },
     "dependencies": {
-        "@stomp/stompjs": "^7.0.0",
         "@lottiefiles/dotlottie-react": "^0.10.0",
+        "@stomp/stompjs": "^7.0.0",
         "@tanstack/react-query": "^5.60.5",
         "axios": "^1.7.7",
         "flowbite": "^2.5.2",
@@ -24,8 +24,8 @@
         "react-router-dom": "^6.28.0",
         "react-slick": "^0.30.2",
         "react-toastify": "^10.0.6",
-        "sockjs-client": "^1.6.1",
         "slick-carousel": "^1.8.1",
+        "sockjs-client": "^1.6.1",
         "zustand": "^5.0.1"
     },
     "devDependencies": {
@@ -34,8 +34,8 @@
         "@types/node": "^22.9.0",
         "@types/react": "^18.3.12",
         "@types/react-dom": "^18.3.1",
-        "@types/sockjs-client": "^1.5.4",
         "@types/react-slick": "^0.23.13",
+        "@types/sockjs-client": "^1.5.4",
         "@vite-pwa/assets-generator": "^0.2.6",
         "@vitejs/plugin-react-swc": "^3.5.0",
         "autoprefixer": "^10.4.20",
@@ -51,6 +51,7 @@
         "typescript": "~5.6.2",
         "typescript-eslint": "^8.11.0",
         "vite": "^5.4.10",
+        "vite-plugin-mkcert": "^1.17.6",
         "vite-plugin-pwa": "^0.21.0",
         "vite-plugin-svgr": "^4.3.0"
     }
